# Rustfiler

./: Cargo.toml  README.MD  README.md
src/: app_state.rs  classifier.rs  cli.rs  gui.rs  main.rs  ollama.rs  organizer.rs  renamer.rs  scanner.rs
