[package]
name = "file-organizer"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_extras", "rfd", "image"]
cli-only = []

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6"
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

# GUI dependencies
eframe = { version = "0.29", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["all_loaders"] }
rfd = { version = "0.15", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-gui]
inherits = "release"
strip = false